Fix UI issues on Safari browser

--- a/public/cover.css
+++ b/public/cover.css
@@ -56,7 +56,7 @@ body {
 
 .nav-masthead .nav-link {
   padding: .25rem 0;
-  font-weight: 700;
+  font-weight: 400;
   color: var(--link-color);
   background-color: transparent;
   border-bottom: .25rem solid transparent;
@@ -94,8 +94,8 @@ body {
   /* padding: 0 1.5rem; */
 }
 .cover .btn-lg {
-  padding: .75rem 1.25rem;
-  font-weight: 700;
+  /*padding: .75rem 1.25rem;*/
+  /*font-weight: 700;*/
 }
 
 
