--- a/public/local_style.css
+++ b/public/local_style.css
@@ -8,7 +8,7 @@ body {
   margin: 0px;
   font-family: 'Nunito', sans-serif;
   color: var(--main-color);
-  font-weight: bold;
+  font-weight: 400;
 }
 
 .cover-container {
@@ -68,4 +68,8 @@ legend {
 .link:hover, .link:focus {
   color: var(--link-color);
   text-decoration: underline;
+}
+
+.lead {
+  font-weight: 400;
 }
